feat: flake github:DeterminateSystems/fh

--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -56,6 +56,11 @@ repo = "nyx"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "fh"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
