--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -57,6 +57,11 @@ repo = "nyx"
 [[sources]]
 type = "github"
 owner = "DeterminateSystems"
+repo = "determinate"
+
+[[sources]]
+type = "github"
+owner = "DeterminateSystems"
 repo = "fh"
 
 [[sources]]
