feat: flake github:DeterminateSystems/nix-src

--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -66,6 +66,11 @@ repo = "fh"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "nix-src"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
