--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -308,6 +308,11 @@ repo = "build-go-cache"
 [[sources]]
 type = "github"
 owner = "numtide"
+repo = "devshell"
+
+[[sources]]
+type = "github"
+owner = "numtide"
 repo = "flake-utils"
 
 [[sources]]
