--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -332,6 +332,11 @@ repo = "nar-serve"
 
 [[sources]]
 type = "github"
+owner = "numtide"
+repo = "nits"
+
+[[sources]]
+type = "github"
 owner = "PaddiM8"
 repo = "kalker"
 
