--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -342,6 +342,11 @@ repo = "nix-auth"
 
 [[sources]]
 type = "github"
+owner = "numtide"
+repo = "nix-filter"
+
+[[sources]]
+type = "github"
 owner = "PaddiM8"
 repo = "kalker"
 
