--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -377,6 +377,11 @@ repo = "treefmt"
 
 [[sources]]
 type = "github"
+owner = "numtide"
+repo = "treefmt-nix"
+
+[[sources]]
+type = "github"
 owner = "PaddiM8"
 repo = "kalker"
 
