feat(flakes): `github:DeterminateSystems/bonk`

--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -81,6 +81,11 @@ repo = "nyx"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "bonk"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
