--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -86,6 +86,11 @@ repo = "bonk"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "cpiotools"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
