--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -91,6 +91,11 @@ repo = "cpiotools"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "determinate"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
