--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -96,6 +96,11 @@ repo = "determinate"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "dhcpv6macd"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
