--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -106,6 +106,11 @@ repo = "fh"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "flake-checker"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
