--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -116,6 +116,11 @@ repo = "flake-iter"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "flake-schemas"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
