--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -121,6 +121,11 @@ repo = "flake-schemas"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "flake-templates"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
