--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -126,6 +126,11 @@ repo = "flake-templates"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "magic-nix-cache"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
