--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -141,6 +141,11 @@ repo = "nix-installer"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "nix-netboot-serve"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
