--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -146,6 +146,11 @@ repo = "nix-netboot-serve"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "nix-src"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
