--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -151,6 +151,11 @@ repo = "nix-src"
 
 [[sources]]
 type = "github"
+owner = "DeterminateSystems"
+repo = "nixos-vault-service"
+
+[[sources]]
+type = "github"
 owner = "dgollings"
 repo = "nix-atlas"
 
