--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -298,6 +298,11 @@ repo = "amis"
 [[sources]]
 type = "github"
 owner = "NixOS"
+repo = "bundlers"
+
+[[sources]]
+type = "github"
+owner = "NixOS"
 repo = "hydra"
 
 [[sources]]
