--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -303,6 +303,11 @@ repo = "bundlers"
 [[sources]]
 type = "github"
 owner = "NixOS"
+repo = "experimental-nix-installer"
+
+[[sources]]
+type = "github"
+owner = "NixOS"
 repo = "hydra"
 
 [[sources]]
