feat(flakes): `github:NixOS/nixops`

--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -327,6 +327,11 @@ repo = "nixfmt"
 
 [[sources]]
 type = "github"
+owner = "NixOS"
+repo = "nixops"
+
+[[sources]]
+type = "github"
 owner = "numtide"
 repo = "flake-utils"
 
