--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -332,6 +332,11 @@ repo = "nixops"
 
 [[sources]]
 type = "github"
+owner = "NixOS"
+repo = "nixos-hardware"
+
+[[sources]]
+type = "github"
 owner = "numtide"
 repo = "flake-utils"
 
