feat(flakes): `github:NixOS/patchelf`

--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -337,6 +337,11 @@ repo = "nixos-hardware"
 
 [[sources]]
 type = "github"
+owner = "NixOS"
+repo = "patchelf"
+
+[[sources]]
+type = "github"
 owner = "numtide"
 repo = "flake-utils"
 
