feat(flakes): `github:NixOS/templates`

--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -342,6 +342,11 @@ repo = "patchelf"
 
 [[sources]]
 type = "github"
+owner = "NixOS"
+repo = "templates"
+
+[[sources]]
+type = "github"
 owner = "numtide"
 repo = "flake-utils"
 
