fix(flakes): comment `github:DeterminateSystems/dhcpv6macd`

--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -94,10 +94,10 @@ type = "github"
 owner = "DeterminateSystems"
 repo = "determinate"
 
-[[sources]]
-type = "github"
-owner = "DeterminateSystems"
-repo = "dhcpv6macd"
+# [[sources]]
+# type = "github"
+# owner = "DeterminateSystems"
+# repo = "dhcpv6macd"
 
 [[sources]]
 type = "github"
