feat(flakes): `github:in-a-dil-emma/declarative-flatpak` (#1015)
* feat: flake github:in-a-dil-emma/declarative-flatpak

* cherry-pick of #1141

--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -151,6 +151,11 @@ repo = "nix-minecraft"
 
 [[sources]]
 type = "github"
+owner = "in-a-dil-emma"
+repo = "declarative-flatpak"
+
+[[sources]]
+type = "github"
 owner = "input-output-hk"
 repo = "haskell.nix"
 
