feat(flake): `github:linyinfeng/angrr` (#1104)

--- a/flakes/manual.toml
+++ b/flakes/manual.toml
@@ -181,6 +181,11 @@ repo = "bitbucket-runner-nix"
 
 [[sources]]
 type = "github"
+owner = "linyinfeng"
+repo = "angrr"
+
+[[sources]]
+type = "github"
 owner = "lnbits"
 repo = "lnbits-legend"
 
